--- a/style.css
+++ b/style.css
@@ -1,95 +1,124 @@
 *{
    margin:0;
    padding:0;
-   box-sizing:border-box; 
+   box-sizing: border-box; 
 }
 a{text-decoration: none;}
 .container{
     width:100%;
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url(tote.jpg );
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url(sunflower.jpg );
     background-size: cover;
     background-position: center;
 }
 .top{
     width:100%;
-    height: 80px;
-    background:rgba(165, 196, 223, 0.575);
+    height:100px;
+    background:rgba(128, 0, 90, 0.089);
     display: flex;
     align-items:center;
     justify-content: space-between;
     padding:0x 150px;
 }
 .logo{
-    width: 20%;
+    width:20%;
 }
 .logo a{
-    display: inline-flex;
-    align-items: center;
-    font-size: 65%;
-    font-family: 'Courier New', Courier, monospace;
-}
-.logo a h1{
-    color: black;
-    justify-items: space-between;
-    padding-left: 5px;
-}
-.logo a img{
-    width: 30%;
-    height: 30%;
-    padding-left: 30px;
-}
-.main_menu{
-    width: 20%;
-    color: black;
-}
-.main_menu ul{
-    list-style: none;
     display: flex;
-    align-items:normal;
+    align-items: center;
     justify-content:space-between;
 }
-.main_menu ul li{
-    position: static;
+.logo a img{
+    width: 100px;
+    display: flex;
+    padding-left: 15px;
+    width: 90px;
+    height: 80px;
 }
-.main_menu ul li::after{
-    content:'';
+.logo a h1{
+    color:#fff;
+    text-transform: uppercase;
+    font-family:'Times New Roman', Times, serif;
+    margin-left: 15px;
+}
+.menu_area{
+    width:30%;
+    color:#fff;
+}
+
+.menu_area ul{
+    list-style: none;
+    display: flex;
+    align-items:center;
+    justify-content:space-between;
+    
+}
+.menu_area ul li{
+    position: relative;
+
+}
+.menu_area ul li::after{
+    content: '';
     position: absolute;
     width: 0%;
-    height:2px;
-    background:black;
-    bottom: -7px;
-    left:0;
-    transition:0.3s all ease-in-out;
+    height: 2px;
+    background: #00ffff;
+    bottom:-7px;
+    left:0; 
+    transition: 0.3 all ease-in-out;  
 }
-.main_menu ul li:hover::after{
-    width:100%;
+.menu_area ul li:hover::after{
+    width: 100%;
 }
-.main_menu ul li a{
-    color:black;
+.menu_area ul li a{
+    color:#fff;
     font-family:'Times New Roman', Times, serif;
-    font-size:16px;
-    transition:0.2s all ease-in-out;
+    font-size: 16px;
+    transition: 0.3s all ease-in-out;
 }
-.main_menu ul li a:hover{
-    color:bisque;
+.menu_area ul li a:hover{
+    color:aqua;
 }
 .info{
-    text-align:center;
+    text-align: center;
     width:100%;
     position:absolute;
     top:50%;
     transform:translateY(-50%);
 }
 .info h1{
-    color:black;
-    font-size: 50px;
-    font-family: 'Times New Roman', Times, serif;
-    margin:30px;
+    color:#fff;
+    font-family: arial;
+    margin:30px 0px;
 }
 .info p{
-    color:black;
-    font-size: 30px;
-    font-family: 'Times New Roman', Times, serif;
-    margin:20px;
+    color:#fff;
+    font-size: 20px;
+    font-family: arial;
+    margin:30px 0px;
+}
+.btn button{
+    padding:20px 50px;
+    background: transparent;
+    border: 2px solid aqua;
+    color:#fff;
+    font-size:15px;
+    border-radius: 20px;
+    cursor:pointer;
+    position:relative;
+    overflow:hidden;
+}
+.btn button::after{
+    content: '';
+    position: absolute;
+    width: 0%;
+    height:100%;
+    background:rgba(83, 128, 0, 0.753);
+    left:0;
+    top:0;
+    z-index:-1;
+    transition: .3s all ease-in-out;
+}
+.btn button:hover::after{
+    width:100%;
 }
